--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -1,106 +1,106 @@
 ### 7. 计算学生各科总成绩
 
-#### 7.1 系统站内信推送
+#### 7.1 计算学生各科总成绩
 
 本节案例主要实现通过录入学生学号，查询该学生各科成绩，从而计算该学生的各科成绩总和。案例不仅涉及单SQL组件、单函数组件、计数器组件、赋值组件等多种组件的使用，还综合运用了资源实例、实体模型、SQL管理、接口生成器功能模块，可以较好地体现全自动开发平台的功能。
 
-##### 7.1.2 准备工作
+##### 7.1.1 准备工作
 
 a）在数据库中准备3张数据表并配上相应的数据。
 
 ##### 学生表：
 
-![7-1](https://www.feisuanyz.com/fsimage/alcj-image/chengji/1.png)
+![image](https://user-images.githubusercontent.com/79617492/178692500-6a250ffe-401a-484d-822c-c06780819815.png)
 
 ##### 图7-1 学生表
 
 ##### 课程表：
 
-![7-2](https://www.feisuanyz.com/fsimage/alcj-image/chengji/2.png)
+![image](https://user-images.githubusercontent.com/79617492/178692540-a5dbaa88-0b5a-4dd6-a635-14c373227e4b.png)
 
 ##### 图7-2 课程表
 
 ##### 成绩表：
 
-![7-3](https://www.feisuanyz.com/fsimage/alcj-image/chengji/3.png)
+![image](https://user-images.githubusercontent.com/79617492/178698351-03040f9f-80ed-491b-938c-a80400bba1ea.png)
 
 ##### 图7-3 成绩表
 
 b）创建项目
 
-##### 具体可参见[《SoFlu社区版快速入门教程第4.1节：如何创建项目》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#41-%E5%A6%82%E4%BD%95%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE)
+##### 具体可参见[《SoFlu（后端）全自动开发平台快速入门教程第4.1节：如何创建项目》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#41-%E5%A6%82%E4%BD%95%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE)
 
-![7-4](https://www.feisuanyz.com/fsimage/alcj-image/chengji/4.png)
+![image](https://user-images.githubusercontent.com/79617492/178698712-48ad6033-ec84-4c74-930e-39929af10aa3.png)
 
 ##### 图7-4 创建项目
 
 c）向项目中添加组件、平台自定义函数、数据库中间件资源等加载项
 
-##### 具体可参见[《SoFlu社区版快速入门教程第4.9节：如何加载资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#49-%E5%A6%82%E4%BD%95%E5%8A%A0%E8%BD%BD%E8%B5%84%E6%BA%90)
+##### 具体可参见[《SoFlu（后端）全自动开发平台快速入门教程第4.9节：如何加载资源》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#49-%E5%A6%82%E4%BD%95%E5%8A%A0%E8%BD%BD%E8%B5%84%E6%BA%90)
 
-![7-5](https://www.feisuanyz.com/fsimage/alcj-image/chengji/11.png)
+![image](https://user-images.githubusercontent.com/79617492/178699056-38eac8a2-8652-4925-b6cc-d60280380c4d.png)
 
 ##### 图7-5 添加组件1
 
-![7-6](https://www.feisuanyz.com/fsimage/alcj-image/chengji/6.png)
+![image](https://user-images.githubusercontent.com/79617492/178699082-9ccf6eda-cc4f-40df-9a01-1e5d7dddd553.png)
 
 ##### 图7-6 添加组件2
 
-![7-7](https://www.feisuanyz.com/fsimage/alcj-image/chengji/7.png)
+![image](https://user-images.githubusercontent.com/79617492/178699103-6f7192f4-f76f-4f3b-abc4-0f49ec091631.png)
 
 ##### 图7-7 添加组件3
 
-![7-8](https://www.feisuanyz.com/fsimage/alcj-image/chengji/8.png)
+![image](https://user-images.githubusercontent.com/79617492/178699118-8e1413da-1fca-4c56-b660-9157f0ef86ec.png)
 
 ##### 图7-8 添加组件4
 
-![7-9](https://www.feisuanyz.com/fsimage/alcj-image/chengji/9.png)
+![image](https://user-images.githubusercontent.com/79617492/178699142-9f29ce3b-85be-42fc-93a3-03092e62b837.png)
 
 ##### 图7-9 添加组件5
 
-![7-10](https://www.feisuanyz.com/fsimage/alcj-image/chengji/10.png)
+![image](https://user-images.githubusercontent.com/79617492/178699184-11030d26-1e48-42de-91ba-fe9d2b9bf37a.png)
 
 ##### 图7-10 添加函数
 
-![7-11](https://www.feisuanyz.com/fsimage/alcj-image/chengji/12.png)
+![image](https://user-images.githubusercontent.com/79617492/178699206-9cb16fe8-9fdb-4e18-b211-23edd1d98b1a.png)
 
 ##### 图7-11 添加资源
 
 d）使用数据库中间件资源创建嵌入式直连DB连接
 
-##### 具体可参见[《SoFlu社区版基础操作指南第10.1.13节：如何新增数据库中间件资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#113-%E6%96%B0%E5%A2%9E%E6%95%B0%E6%8D%AE%E5%BA%93%E4%B8%AD%E9%97%B4%E4%BB%B6%E8%B5%84%E6%BA%90)
+##### 具体可参见[《SoFlu（后端）全自动开发平台教程基础操作指南第10.1.13节：如何新增数据库中间件资源》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#113-%E6%96%B0%E5%A2%9E%E6%95%B0%E6%8D%AE%E5%BA%93%E4%B8%AD%E9%97%B4%E4%BB%B6%E8%B5%84%E6%BA%90)
 
-可以采用直接填写配置项，也可以通过点击数据库连接来配置。
+可以采用直接填写配置项，也可以通过点击数据库连接来配置，如图下图所示：
 
-![7-12](https://www.feisuanyz.com/fsimage/alcj-image/chengji/13.png)
+![image](https://user-images.githubusercontent.com/79617492/178699362-360b09fe-7d07-4a04-8338-77870264260b.png)
 
 ##### 图7-12 填写配置项
 
-![7-13](https://www.feisuanyz.com/fsimage/alcj-image/chengji/15.png)
+![image](https://user-images.githubusercontent.com/79617492/178699382-afb9ac0c-f20a-42e6-b848-26bdac4a8271.png)
 
 ##### 图7-13 点击数据库连接
 
-![7-14](https://www.feisuanyz.com/fsimage/alcj-image/chengji/14.png)
+![image](https://user-images.githubusercontent.com/79617492/178699399-9914f5b9-0572-43f5-85f7-b3aea677ba2d.png)
 
 ##### 图7-14 修改数据库连接
+:
+e）利用接口生成器自动生成实体模型和SQL信息，如图7-15、图7-16、图7-17、图7-18所示：
 
-e）利用接口生成器自动生成实体模型和SQL信息
+##### 具体可参见[《SoFlu（后端）全自动开发平台教程基础操作指南第12.2.3节：自动生成实体模型》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B.md#23-%E8%87%AA%E5%8A%A8%E7%94%9F%E6%88%90%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B)及[《SoFlu（后端）全自动开发平台快速入门教程第4.10节：如何自动生成SQL信息》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#410-%E5%A6%82%E4%BD%95%E8%87%AA%E5%8A%A8%E7%94%9F%E6%88%90sql%E4%BF%A1%E6%81%AF)
 
-##### 具体可参见[《SoFlu社区版基础操作指南第12.2.3节：自动生成实体模型》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B.md#23-%E8%87%AA%E5%8A%A8%E7%94%9F%E6%88%90%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B)及[《SoFlu社区版快速入门教程第4.10节：如何自动生成SQL信息》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#410-%E5%A6%82%E4%BD%95%E8%87%AA%E5%8A%A8%E7%94%9F%E6%88%90sql%E4%BF%A1%E6%81%AF)
-
-![7-15](https://www.feisuanyz.com/fsimage/alcj-image/chengji/16.png)
+![image](https://user-images.githubusercontent.com/79617492/178699996-3ad63444-a559-41f6-9eb7-200e79815628.png)
 
 ##### 图7-15 选择数据1
 
-![7-16](https://www.feisuanyz.com/fsimage/alcj-image/chengji/17.png)
+![image](https://user-images.githubusercontent.com/79617492/178700020-9ad8a887-ed56-4154-a14c-40fea4e904e0.png)
 
 ##### 图7-16 选择数据2
 
-![7-17](https://www.feisuanyz.com/fsimage/alcj-image/chengji/18.png)
+![image](https://user-images.githubusercontent.com/79617492/178700044-a8caefe0-791d-4a38-96ff-5eab347bd862.png)
 
 ##### 图7-17 生成实体模型
 
-![7-18](https://www.feisuanyz.com/fsimage/alcj-image/chengji/19.png)
+![image](https://user-images.githubusercontent.com/79617492/178700062-44b7c280-449b-42ac-880f-7b16c3cbfa98.png)
 
 ##### 图7-18 生成系统SQL
 
@@ -108,15 +108,15 @@ e）利用接口生成器自动生成实体模型和SQL信息
 
 a）新增接口模块，新增接口，如图
 
-![7-19](https://www.feisuanyz.com/fsimage/alcj-image/chengji/20.png)
+![image](https://user-images.githubusercontent.com/79617492/178700083-d495e2a2-4f00-4e31-87d8-87012072210d.png)
 
 ##### 图7-19 编辑接口模块
 
-![7-20](https://www.feisuanyz.com/fsimage/alcj-image/chengji/21.png)
+![image](https://user-images.githubusercontent.com/79617492/178700346-cd35eb71-a6b7-4d68-8827-7bde90cb9912.png)
 
 ##### 图7-20 编辑接口信息：基本信息
 
-![7-21](https://www.feisuanyz.com/fsimage/alcj-image/chengji/22.png)
+![image](https://user-images.githubusercontent.com/79617492/178700366-592c8882-131d-4856-9a31-2ee57b68f004.png)
 
 ##### 图7-21 编辑接口信息：入参列表
 
@@ -124,107 +124,107 @@ b）流程图编辑
 
 流程图概览：
 
-![7-22](https://www.feisuanyz.com/fsimage/alcj-image/chengji/23.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-22.png)
 
 ##### 图7-22 流程图概览
 
 单SQL组件（【查询】学生成绩）：根据学生学号在成绩表中查询该学生各科成绩，具体配置如图7-23、图7-24、图7-25、图7-26所示：
 
-![7-23](https://www.feisuanyz.com/fsimage/alcj-image/chengji/24.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-23.png)
 
 ##### 图7-23 单SQL组件
 
-![7-24](https://www.feisuanyz.com/fsimage/alcj-image/chengji/25.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-24.png)
 
 ##### 图7-24 填写数据
 
-![7-25](https://www.feisuanyz.com/fsimage/alcj-image/chengji/26.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-25.png)
 
 ##### 图7-25 SQL内容
 
-![7-26](https://www.feisuanyz.com/fsimage/alcj-image/chengji/27.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-26.png)
 
 ##### 图7-26 参数选择
 
 单函数组件（取成绩列表大小）：计算查询到的学生成绩列表记录条数，即该学生有几科成绩需要进行累加，具体配置如图7-27所示：
 
-![7-27](https://www.feisuanyz.com/fsimage/alcj-image/chengji/28.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-27.png)
 
 ##### 图7-27 单函数组件
 
 计数器组件（【遍历】学生成绩列表）：循环遍历查询到的学生成绩记录，计数器默认从0逐次递加到查询到的记录数，具体配置如图7-28、图7-29、图7-30所示：
 
-![7-28](https://www.feisuanyz.com/fsimage/alcj-image/chengji/31.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-28.png)
 
 ##### 图7-28 计数器组件
 
-![7-29](https://www.feisuanyz.com/fsimage/alcj-image/chengji/32.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-29.png)
 
 ##### 图7-29 参数录入
 
-![7-30](https://www.feisuanyz.com/fsimage/alcj-image/chengji/33.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-30.png)
 
 ##### 图7-30 参数描述
 
 赋值组件（计算成绩）：用来计算该学生各科成绩总和，具体配置如图7-31、图7-32、图7-33、图7-34、图7-35、图7-36所示：
 
-![7-31](https://www.feisuanyz.com/fsimage/alcj-image/chengji/34.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-31.png)
 
 ##### 图7-31 赋值组件
 
-![7-32](https://www.feisuanyz.com/fsimage/alcj-image/chengji/35.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-32.png)
 
 ##### 图7-32 表格选择
 
-![7-33](https://www.feisuanyz.com/fsimage/alcj-image/chengji/37.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-33.png)
 
 ##### 图7-33 填写模型数据1
 
-![7-34](https://www.feisuanyz.com/fsimage/alcj-image/chengji/38.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-34.png)
 
 ##### 图7-34 填写模型数据2
 
-![7-35](https://www.feisuanyz.com/fsimage/alcj-image/chengji/39.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-35.png)
 
 ##### 图7-35 参数详情：【查询】学生成绩
 
-![7-36](https://www.feisuanyz.com/fsimage/alcj-image/chengji/40.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-36.png)
 
 ##### 图7-36 参数详情：计算成绩
 
 互斥条件组件（判断是否循环）：用于判断是否继续循环进行成绩累加计算，当遍历学生成绩列表记录数小于查询到的学生成绩列表总数时，继续循环操作进行累加；当遍历学生成绩列表记录数大于等于查询到的学生成绩列表总数时，退出循环，具体配置如图7-37、图7-38、图7-39、图7-40、图7-41所示：
 
-![7-37](https://www.feisuanyz.com/fsimage/alcj-image/chengji/41.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-37.png)
 
 ##### 图7-37 互斥条件
 
-![7-38](https://www.feisuanyz.com/fsimage/alcj-image/chengji/42.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-38.png)
 
 ##### 图7-38 顺序流1
 
-![7-39](https://www.feisuanyz.com/fsimage/alcj-image/chengji/43.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-39.png)
 
 ##### 图7-39 流转条件1
 
-![7-40](https://www.feisuanyz.com/fsimage/alcj-image/chengji/44.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-40.png)
 
 ##### 图7-40 顺序流2
 
-![7-41](https://www.feisuanyz.com/fsimage/alcj-image/chengji/45.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-41.png)
 
 ##### 图7-41 流转条件2
 
 输出结果组件：将赋值组件计算得到的结果输出，具体配置如图7-42、图7-43、图7-44所示：
 
-![7-42](https://www.feisuanyz.com/fsimage/alcj-image/chengji/46.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-42.png)
 
 ##### 图7-42 输出结果组件
 
-![7-43](https://www.feisuanyz.com/fsimage/alcj-image/chengji/47.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-43.png)
 
 ##### 图7-43 填写数据
 
-![7-44](https://www.feisuanyz.com/fsimage/alcj-image/chengji/48.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-44.png)
 
 ##### 图7-44 参数描述：计算成绩
 
@@ -234,22 +234,22 @@ d）提交并发布接口。
 
 e）编辑测试用例录入参数（即学生学号），并启用可视化日志，如图7-45、图7-46所示：
 
-![7-45](https://www.feisuanyz.com/fsimage/alcj-image/chengji/49.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-45.png)
 
 ##### 图7-45 点击测试用例
 
-![7-46](https://www.feisuanyz.com/fsimage/alcj-image/chengji/50.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-46.png)
 
 ##### 图7-46 编辑接口测试用例
 
 f）执行测试用例，查看测试用例执行结果，如图7-47所示：
 
-![7-47](https://www.feisuanyz.com/fsimage/alcj-image/chengji/51.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-47.png)
 
 ##### 图7-47 查看执行结果
 
 g）查看可视化日志，如图7-48所示：
 
-![7-48](https://www.feisuanyz.com/fsimage/alcj-image/chengji/53.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-48.png)
 
 ##### 图7-48 查看可视化日志
