--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -124,107 +124,107 @@ b）流程图编辑
 
 流程图概览：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-22.png)
+![image](https://user-images.githubusercontent.com/79617492/178882461-a93aaec5-c34c-4aec-80ec-f574f15b9436.png)
 
 ##### 图7-22 流程图概览
 
 单SQL组件（【查询】学生成绩）：根据学生学号在成绩表中查询该学生各科成绩，具体配置如图7-23、图7-24、图7-25、图7-26所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-23.png)
+![image](https://user-images.githubusercontent.com/79617492/178882475-52f1086d-7ef0-4541-b559-1d78cf8b010b.png)
 
 ##### 图7-23 单SQL组件
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-24.png)
+![image](https://user-images.githubusercontent.com/79617492/178882491-611cf1c0-574f-4d5e-b6e9-ca0f5e29c003.png)
 
 ##### 图7-24 填写数据
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-25.png)
+![image](https://user-images.githubusercontent.com/79617492/178882503-862b2e79-f758-408b-b52b-892c087efed2.png)
 
 ##### 图7-25 SQL内容
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-26.png)
+![image](https://user-images.githubusercontent.com/79617492/178882518-137ba904-d2e8-4bd0-b9d9-989eb8123974.png)
 
 ##### 图7-26 参数选择
 
 单函数组件（取成绩列表大小）：计算查询到的学生成绩列表记录条数，即该学生有几科成绩需要进行累加，具体配置如图7-27所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-27.png)
+![image](https://user-images.githubusercontent.com/79617492/178882541-c61ba83e-bd08-44c5-b4ba-8ca0f2c4dd95.png)
 
 ##### 图7-27 单函数组件
 
 计数器组件（【遍历】学生成绩列表）：循环遍历查询到的学生成绩记录，计数器默认从0逐次递加到查询到的记录数，具体配置如图7-28、图7-29、图7-30所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-28.png)
+![image](https://user-images.githubusercontent.com/79617492/178882580-9f63725d-7302-4a49-9368-0ab96de36179.png)
 
 ##### 图7-28 计数器组件
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-29.png)
+![image](https://user-images.githubusercontent.com/79617492/178882604-ecfc055b-4ac9-4f7e-b4ff-0985f854ea63.png)
 
 ##### 图7-29 参数录入
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-30.png)
+![image](https://user-images.githubusercontent.com/79617492/178882616-592ea3e9-3276-4432-9213-a4a009bb0404.png)
 
 ##### 图7-30 参数描述
 
 赋值组件（计算成绩）：用来计算该学生各科成绩总和，具体配置如图7-31、图7-32、图7-33、图7-34、图7-35、图7-36所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-31.png)
+![image](https://user-images.githubusercontent.com/79617492/178882629-7ef58140-0f30-4bf3-b545-0a60ab6f8433.png)
 
 ##### 图7-31 赋值组件
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-32.png)
+![image](https://user-images.githubusercontent.com/79617492/178882652-a8569fc8-fa3d-42df-b711-629ca33d7ab2.png)
 
 ##### 图7-32 表格选择
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-33.png)
+![image](https://user-images.githubusercontent.com/79617492/178882665-ad5b67ad-bd74-4cb2-911a-87752aaf2ebf.png)
 
 ##### 图7-33 填写模型数据1
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-34.png)
+![image](https://user-images.githubusercontent.com/79617492/178887446-ec047dd1-1345-44fd-b60f-dac1a6f1411e.png)
 
 ##### 图7-34 填写模型数据2
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-35.png)
+![image](https://user-images.githubusercontent.com/79617492/178887462-c7d285de-557a-48d6-add0-c4e16004a123.png)
 
 ##### 图7-35 参数详情：【查询】学生成绩
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-36.png)
+![image](https://user-images.githubusercontent.com/79617492/178887494-0baaf332-626d-4599-a98a-dafbd9d4df5c.png)
 
 ##### 图7-36 参数详情：计算成绩
 
 互斥条件组件（判断是否循环）：用于判断是否继续循环进行成绩累加计算，当遍历学生成绩列表记录数小于查询到的学生成绩列表总数时，继续循环操作进行累加；当遍历学生成绩列表记录数大于等于查询到的学生成绩列表总数时，退出循环，具体配置如图7-37、图7-38、图7-39、图7-40、图7-41所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-37.png)
+![image](https://user-images.githubusercontent.com/79617492/178887505-2bfc5af6-94bd-4cad-b061-28c63e888d6e.png)
 
 ##### 图7-37 互斥条件
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-38.png)
+![image](https://user-images.githubusercontent.com/79617492/178887529-f47f1422-20fd-4dd0-bc44-172621113c73.png)
 
 ##### 图7-38 顺序流1
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-39.png)
+![image](https://user-images.githubusercontent.com/79617492/178887555-e14bf48b-1073-427a-8308-6377b8ad8552.png)
 
 ##### 图7-39 流转条件1
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-40.png)
+![image](https://user-images.githubusercontent.com/79617492/178887575-a629d743-5b41-49ec-be37-db1c0afafedc.png)
 
 ##### 图7-40 顺序流2
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-41.png)
+![image](https://user-images.githubusercontent.com/79617492/178887590-55ad1ab9-6ecf-4cef-a748-b266de2468e6.png)
 
 ##### 图7-41 流转条件2
 
 输出结果组件：将赋值组件计算得到的结果输出，具体配置如图7-42、图7-43、图7-44所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-42.png)
+![image](https://user-images.githubusercontent.com/79617492/178892340-fc27b6f2-1ad8-433f-9387-bc697b53c78a.png)
 
 ##### 图7-42 输出结果组件
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-43.png)
+![image](https://user-images.githubusercontent.com/79617492/178892355-0abd23b9-b343-49b6-8005-e1a1271bb712.png)
 
 ##### 图7-43 填写数据
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-44.png)
+![image](https://user-images.githubusercontent.com/79617492/178892370-7afd2a18-2cfc-4d20-9141-434c32a330be.png)
 
 ##### 图7-44 参数描述：计算成绩
 
@@ -234,22 +234,22 @@ d）提交并发布接口。
 
 e）编辑测试用例录入参数（即学生学号），并启用可视化日志，如图7-45、图7-46所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-45.png)
+![image](https://user-images.githubusercontent.com/79617492/178892430-ea6c68ba-e490-4e4a-90a5-d817a3a76e67.png)
 
 ##### 图7-45 点击测试用例
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-46.png)
+![image](https://user-images.githubusercontent.com/79617492/178892440-fa0dbb00-60fb-4509-9756-c28ce0a968df.png)
 
 ##### 图7-46 编辑接口测试用例
 
 f）执行测试用例，查看测试用例执行结果，如图7-47所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-47.png)
+![image](https://user-images.githubusercontent.com/79617492/178892455-433546fb-0391-4a62-96f1-b7ce26726e8f.png)
 
 ##### 图7-47 查看执行结果
 
 g）查看可视化日志，如图7-48所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/7.%20%E8%AE%A1%E7%AE%97%E5%AD%A6%E7%94%9F%E5%90%84%E7%A7%91%E6%80%BB%E6%88%90%E7%BB%A9/7-48.png)
+![image](https://user-images.githubusercontent.com/79617492/178892479-f59ab708-aa22-4645-921b-31a18f2d34c7.png)
 
 ##### 图7-48 查看可视化日志
