--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/3. 综合案例/4. 身份证识别.md
@@ -8,11 +8,11 @@
 
 进入全自动开发平台“身份证识别”功能接口测试用例页面，在接口入参处上传身份证图片文件，并输入身份证文件的类型（即上传的身份证文件为正面还是反面），启动可视化日志后执行该接口，即可返回身份证图片上的个人信息，如图4-2所示：
 
-![4-1](https://www.feisuanyz.com/fsimage/alcj-image/idcard/2_1.png)
+![image](https://user-images.githubusercontent.com/79617492/179722990-d6c2a597-1e7a-4a9f-a8cd-d3d09f96b32a.png)
 
 ##### 图4-1 测试用例编辑页面
 
-![4-2](https://www.feisuanyz.com/fsimage/alcj-image/idcard/2_2.png)
+![image](https://user-images.githubusercontent.com/79617492/179723019-75f5fa28-0178-4f66-bcdf-59efa9e56bc5.png)
 
 ##### 图4-2 身份证信息展示
 
