--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/1. SQL组件/1. 事务组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/1. SQL组件/1. 事务组件的使用.md
@@ -14,35 +14,35 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在窗体视图左侧的“组件列表”中“SQL”栏目下，找到“开始事务”和“提交事务”组件，拖拽至绘图面板，连接好组件的流程图，如图1-1、1-2所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_01.png)
+![image](https://user-images.githubusercontent.com/79617492/180125062-1fcb65fb-37ba-4a19-be26-90ffbe4a882f.png)
 
 ##### 图1-1 找到事务组件
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_02.png)
+![image](https://user-images.githubusercontent.com/79617492/180125071-3f5622b1-7a6e-468b-b4d6-28f7a636c023.png)
 
 ##### 图1-2 连接组件流程图
 
 b）选择一个SQL组件放置在事务组件之间（此处以单SQL组件为例），为显示效果，同时也放置一个输出结果组件，连接好组件的流程图，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_03.png)
+![image](https://user-images.githubusercontent.com/79617492/180140775-9850b4c2-2063-4162-8cf4-50b8dcc349de.png)
 
 ##### 图1-3 连接组件流程图
 
 c）选中单SQL组件，根据项目需求填写单SQL组件的名称和描述，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_05.png)
+![image](https://user-images.githubusercontent.com/79617492/180140788-a10e288b-2e94-4fc5-9135-b89a1ffd9a70.png)
 
 ##### 图1-4 填写单SQL组件基本信息
 
 d）单击“SQL信息”处未选中记录方框，如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_06.png)
+![image](https://user-images.githubusercontent.com/79617492/180140804-04c88341-4347-4972-9e49-30a813c6d420.png)
 
 ##### 图1-5 配置SQL信息
 
 e）进入“填写数据”页面，选择SQL名称，同时选择流程变量，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_04.png)
+![image](https://user-images.githubusercontent.com/79617492/180140818-b6261d72-a599-43b6-bc80-5e81f3611d2a.png)
 
 ##### 图1-6 选择SQL名称
 
@@ -52,23 +52,23 @@ f）SQL信息设置完成后，单击“确定”即可。
 
 g）选中输出结果组件，在“响应结果”处选择输出结果信息，如图1-7、1-8所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_07.png)
+![image](https://user-images.githubusercontent.com/79617492/180140833-9ef6a825-3b00-453e-9c0e-fa1044ddb75a.png)
 
 ##### 图1-7 选择响应结果
 
-![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_08.png)
+![image](https://user-images.githubusercontent.com/79617492/180140849-cd6b6ee7-1f94-4b5f-a3a8-8d9853f34071.png)
 
 ##### 图1-8 选择输出结果信息
 
 h）在“输出项值”处，单击“未选中记录”方框，进入“填写数据”页面，如图1-9所示：
 
-![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_09.png)
+![image](https://user-images.githubusercontent.com/79617492/180140866-198de14b-a5ea-47a2-beb7-b08c3548b946.png)
 
 ##### 图1-9 设置输出项值
 
 i）在“字段值”处，根据项目需求选择流程变量，如图1-10所示：
 
-![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_13.png)
+![image](https://user-images.githubusercontent.com/79617492/180140877-550a9669-a08b-4751-8442-9fd738d07a8a.png)
 
 ##### 图1-10 选择流程变量
 
