--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/1. SQL组件/3. 单SQL组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/1. SQL组件/3. 单SQL组件的使用.md
@@ -14,31 +14,31 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在窗体视图左侧的“组件列表”中，找到单SQL组件，拖拽至绘图面板，如图3-1所示：
 
-![3-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_01.png)
+![image](https://user-images.githubusercontent.com/79617492/180141652-f7a25efa-c36c-4e0d-be8c-3a21a8235a48.png)
 
 ##### 图3-1 找到单SQL组件
 
 b）为显示效果，选择一个“输出结果”组件拖拽至绘图面板，连接好组件的流程图，如图3-2所示：
 
-![3-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_02.png)
+![image](https://user-images.githubusercontent.com/79617492/180141777-b3722ae2-21d5-4d75-a722-3b9b952b7fa3.png)
 
 ##### 图3-2 连接组件流程图
 
 c）选中单SQL组件，根据项目需求填写单SQL组件的名称和描述，如图3-3所示：
 
-![3-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_03.png)
+![image](https://user-images.githubusercontent.com/79617492/180141843-41f29673-e0a5-43a8-9af9-2ee77fe68fe2.png)
 
 ##### 图3-3 填写单SQL组件基本信息
 
 d）单击“SQL信息”处未选中记录方框，进入“填写数据”页面，如图3-4所示：
 
-![3-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_04.png)
+![image](https://user-images.githubusercontent.com/79617492/180141895-6e0817ef-cfa6-4a83-9ee1-ae1fe8049c67.png)
 
 ##### 图3-4 进入填写数据页面
 
 e）选择SQL名称，也可根据项目需要设置入参和主键名称等，如图3-5所示：
 
-![3-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_05.png)
+![image](https://user-images.githubusercontent.com/79617492/180141912-452112a6-18b1-4bfd-ad82-71888b7b291e.png)
 
 ##### 图3-5 设置SQL信息
 
@@ -46,23 +46,23 @@ f）SQL信息设置完成后，单击“确定”即可。
 
 g）选中输出结果组件，在“响应结果”处选择输出结果信息，如图3-6、3-7所示：
 
-![3-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_06.png)
+![image](https://user-images.githubusercontent.com/79617492/180141928-8461b2a2-d1d9-4e7a-b483-0d0f7ba0a7e6.png)
 
 ##### 图3-6 选择响应结果
 
-![3-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_07.png)
+![image](https://user-images.githubusercontent.com/79617492/180141941-5005071c-e2e5-4e3f-8fd9-6e8b85c76154.png)
 
 ##### 图3-7 选择输出结果信息
 
 h）在“输出项值”处，单击“未选中记录”方框，进入“填写数据”页面，如图3-8所示：
 
-![3-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_08.png)
+![image](https://user-images.githubusercontent.com/79617492/180141963-bf765114-851d-412e-90e6-e4315e2384a3.png)
 
 ##### 图3-8 设置输出项值
 
 i）在“字段值”处，选择流程变量，如图3-9所示：
 
-![3-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_09.png)
+![image](https://user-images.githubusercontent.com/79617492/180141972-912958ef-d7b7-406f-847e-b23ba933e0b2.png)
 
 ##### 图3-9 选择流程变量
 
