--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/1. SQL组件/4. 多SQL组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/1. SQL组件/4. 多SQL组件的使用.md
@@ -14,37 +14,37 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在窗体视图左侧的“组件列表”中，找到多SQL组件，拖拽至绘图面板，如图4-1所示：
 
-![4-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/180142240-8317eee7-980f-4f75-839e-e28dd1e36366.png)
 
 ##### 图4-1 找到多SQL组件
 
 b）为显示效果，选择一个“输出结果”组件拖拽至绘图面板，连接好组件的流程图，如图4-2所示：
 
-![4-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_02.png)
+![image](https://user-images.githubusercontent.com/79617492/180142257-f7bdbb8b-91e7-4ffe-807b-cdb51955fece.png)
 
 ##### 图4-2 连接组件流程图
 
 c）选中多SQL组件，根据项目需求填写多SQL组件的名称和描述，如图4-3所示：
 
-![4-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_03.png)
+![image](https://user-images.githubusercontent.com/79617492/180142272-942a975e-2de7-4d22-82c5-d0f6733869a9.png)
 
 ##### 图4-3 填写多SQL组件基本信息
 
 d）单击“SQL信息”处未选中记录方框，进入“填写数据”页面，如图4-4所示：
 
-![4-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_04.png)
+![image](https://user-images.githubusercontent.com/79617492/180142289-4e660abd-d07d-43c1-9777-271380b32bff.png)
 
 ##### 图4-4 配置SQL信息
 
 e）单击“添加子节点”，可根据项目需求添加多条SQL记录，如图4-5所示：
 
-![4-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_05.png)
+![image](https://user-images.githubusercontent.com/79617492/180142315-b5db7781-338f-453c-b2fe-ed6fc1a7aba3.png)
 
 ##### 图4-5 添加多条SQL记录
 
 f）为各条SQL记录选择SQL名称，同时也可设置入参和主键名称，如图4-6所示：
 
-![4-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_06.png)
+![image](https://user-images.githubusercontent.com/79617492/180142334-0baa3e47-3652-4205-8bff-25813a9eb781.png)
 
 ##### 图4-6 设置SQL信息
 
@@ -54,23 +54,23 @@ g）SQL信息设置完成后，单击“确定”即可。
 
 h）选中输出结果组件，在“响应结果”处选择输出结果信息，如图4-7、4-8所示：
 
-![4-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_07.png)
+![image](https://user-images.githubusercontent.com/79617492/180142352-ca9594af-e4b4-425c-9756-9fe8d59dbc58.png)
 
 ##### 图4-7 选择响应结果
 
-![4-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_07.png)
+![image](https://user-images.githubusercontent.com/79617492/180142370-e50a19af-40f6-415f-b1f7-54906f6ecdf2.png)
 
 ##### 图4-8 选择输出结果信息
 
 i）在“输出项值”处，单击“未选中记录”方框，进入“填写数据”页面，如图4-9所示：
 
-![4-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_08.png)
+![image](https://user-images.githubusercontent.com/79617492/180142382-5b58a585-c429-49ad-bc0e-d1be08cf360c.png)
 
 ##### 图4-9 设置输出项值
 
 j）在“字段值”处，选择流程变量，如图4-10所示：
 
-![4-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_09.png)
+![image](https://user-images.githubusercontent.com/79617492/180142400-585a7ce4-f27f-4e1e-b9db-85948cea64c7.png)
 
 ##### 图4-10 选择流程变量
 
