--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
@@ -12,73 +12,73 @@ a）您需要拥有“接口管理”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
-c）您需要提前创建好MongoDB数据库资源实例，创建方式见[《SoFlu社区版基础操作指南第1.10节：新增MongoDB数据库资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#110-%E6%96%B0%E5%A2%9Emongodb%E6%95%B0%E6%8D%AE%E5%BA%93%E8%B5%84%E6%BA%90)。
+c）您需要提前创建好MongoDB数据库资源实例，创建方式见[《SoFlu（后端）全自动开发平台教程基础操作指南第10.1.10节：新增MongoDB数据库资源》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#110-%E6%96%B0%E5%A2%9Emongodb%E6%95%B0%E6%8D%AE%E5%BA%93%E8%B5%84%E6%BA%90)。
 
 ##### 3.1.3 操作步骤
 
 a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“数据库”栏目下，找到MongoDB组件，拖拽至绘图面板，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_2.png)
+![image](https://user-images.githubusercontent.com/79617492/180173402-b52963e5-3ab9-44ba-8523-b8baacc2badc.png)
 
 ##### 图1-1 找到MongoDB组件
 
 b）同时拖拽一个输出结果组件，连接好组件的流程图，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_3.png)
+![image](https://user-images.githubusercontent.com/79617492/180173421-53d263ce-15ce-47fc-9d4e-c6e71de7613f.png)
 
 ##### 图1-2 连接组件流程图
 
 c）选中HTTP组件，根据项目需求填写组件的名称和描述，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_4.png)
+![image](https://user-images.githubusercontent.com/79617492/180173441-7c83fa50-7917-4eec-b598-a3cd312835a3.png)
 
 ##### 图1-3 填写组件的基本信息
 
 d）单击“Mongo实例名字”处选择记录方框，进入表格选择页面，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_5.png)
+![image](https://user-images.githubusercontent.com/79617492/180173484-041a4bdf-81ec-4d2e-bbb8-bbaeddf3ecc5.png)
 
 ##### 图1-4 配置MongoDB数据库资源
 
 e）在表格选择页面，双击选择已连接好的MongoDB数据库资源，如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_6.png)
+![image](https://user-images.githubusercontent.com/79617492/180173513-7df2c7d0-495e-4692-827b-76b2e8ae9888.png)
 
 ##### 图1-5 选择MongoDB数据库资源
 
 f）输入表名，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_7.png)
+![image](https://user-images.githubusercontent.com/79617492/180173536-060a165f-68bb-4ccb-aa1a-2392df4063df.png)
 
 ##### 图1-6 填写表名
 
 g）选择功能方法，如图1-7所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_8.png)
+![image](https://user-images.githubusercontent.com/79617492/180173551-90f2a177-1160-4d8b-b7d9-6fa482769198.png)
 
 ##### 图1-7 选择功能方法
 
 h）单击“参数信息”处的未选中记录方框，进入填写数据页面，如图1-8所示：
 
-![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_9.png)
+![image](https://user-images.githubusercontent.com/79617492/180173579-6c13166c-f055-4760-b25c-a9436823948a.png)
 
 ##### 图1-8 配置参数信息
 
 i）在填写数据页面，单击“保存内容”处的参数选择按钮，进入参数选择页面，如图1-9所示：
 
-![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_10.png)
+![image](https://user-images.githubusercontent.com/79617492/180173597-594cbf1a-7a0e-40b5-ab8d-ec69f0603e76.png)
 
 ##### 图1-9 配置保存内容
 
 j）在参数选择页面，双击选择接口根参数，如图1-10所示：
 
-![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_11.png)
+![image](https://user-images.githubusercontent.com/79617492/180173615-f5890cc8-7f14-4199-9ff5-8f8086f280aa.png)
 
 ##### 图1-10 选择参数
 
 ##### 说明：本示例在功能方法处选择的是“新增数据”，故需要在新创建接口配置入口参数时，添加表单参数，如图1-11所示：
 
-![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_1.png)
+![image](https://user-images.githubusercontent.com/79617492/180173634-c082f0b6-c1b5-4721-a1fc-71b79d64668e.png)
 
 ##### 图1-11 添加表单参数
 
@@ -86,25 +86,25 @@ k）在填写数据页面，单击“确定”。
 
 l）选中输出结果组件，单击“响应结果”处的三等号按钮，双击选择一个响应结果，如图1-12所示：
 
-![1-12](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_12.png)
+![image](https://user-images.githubusercontent.com/79617492/180173663-bfc32770-0d23-4a9d-8569-35806086c26b.png)
 
 ##### 图1-12 配置响应结果
 
 m）单击“输出项值”处的未选中记录方框，进入填写数据页面，如图1-13所示：
 
-![1-13](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_13.png)
+![image](https://user-images.githubusercontent.com/79617492/180173689-f5484da9-c26b-4ee4-bb24-8033e74db949.png)
 
 ##### 图1-13 配置输出项值
 
 n）在填写数据页面，单击字段值处的参数选择按钮，进入参数选择页面，如图1-14所示：
 
-![1-14](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_14.png)
+![image](https://user-images.githubusercontent.com/79617492/180173712-f3e2ae5a-6057-4665-ae54-bae84f237001.png)
 
 ##### 图1-14 配置字段值
 
 o）在参数选择页面，选择“Mongo组件”页签，双击选择Mongo组件的执行结果mongoResult，如图1-15所示：
 
-![1-15](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_15.png)
+![image](https://user-images.githubusercontent.com/79617492/180173747-be93ecc3-0f25-4e61-8adc-06d989fa2c09.png)
 
 ##### 图1-15 引用Mongo组件的执行结果
 
