--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
@@ -16,35 +16,35 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在窗体视图左侧的“组件列表”中“文件”栏目下，找到SFTP方式下载组件，拖至窗体视图，如图4-1所示：
 
-![4-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_1.png)
+![image](https://user-images.githubusercontent.com/79617492/180348599-dae4432d-3ddc-400e-98ee-8139db4e71dc.png)
 
 ##### 图4-1 找到SFTP方式下载组件
 
 b）连接好组件的流程图，选中SFTP方式下载组件，根据项目需求填写SFTP方式下载组件的名称和描述，如图4-2所示：
 
-![4-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_2.png)
+![image](https://user-images.githubusercontent.com/79617492/180349058-f74b588b-126a-4e96-ac46-e7e9f41767ce.png)
 
 ##### 图4-2 填写SFTP方式下载组件的基本信息
 
 c）单击“SFTP下载信息”处未选中记录方框，进入填写数据页面，如图4-3所示：
 
-![4-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_3.png)
+![image](https://user-images.githubusercontent.com/79617492/180393539-9c553f75-dcb2-439c-a802-21b8777d88af.png)
 
 ##### 图4-3 配置SFTP下载信息
 
 d）在填写数据页面，单击“资源实例名称”处的选择记录方框选择已接好的SFTP资源，如图4-4、4-5所示：
 
-![4-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_4.png)
+![image](https://user-images.githubusercontent.com/79617492/180396087-cc4bf930-5329-4548-8781-e102aca6b275.png)
 
 ##### 图4-4 选择资源实例
 
-![4-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_5.png)
+![image](https://user-images.githubusercontent.com/79617492/180396119-92754100-7a21-45cd-b8c2-9b552746362e.png)
 
 ##### 图4-5 参数选择页面
 
 e）设置文件的下载路径，如图4-6所示：
 
-![4-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_6.png)
+![image](https://user-images.githubusercontent.com/79617492/180396158-8daad8b8-0d76-42f4-99b4-0512fad842c0.png)
 
 ##### 图4-6 设置下载路径
 
@@ -52,7 +52,7 @@ e）设置文件的下载路径，如图4-6所示：
 
 f）选择下载结果返回方式，可根据项目需求选择“直接下载”或“返回流对象”，如图4-7所示：
 
-![4-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_8.png)
+![image](https://user-images.githubusercontent.com/79617492/180396192-73a2285b-404d-414a-94f6-71f120af556f.png)
 
 ##### 图4-7 选择下载结果返回方式
 
