--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/4. 文件组件/6. XEOS方式下载组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/4. 文件组件/6. XEOS方式下载组件的使用.md
@@ -16,31 +16,31 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“文件”栏目下，找到XEOS方式下载组件，拖至窗体视图，如图6-1所示：
 
-![6-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_8_1.png)
+![image](https://user-images.githubusercontent.com/79617492/181187573-041f44d0-2054-4942-b508-9a7b9a22ac3b.png)
 
 ##### 图6-1 找到XEOS方式下载组件
 
 b）连接好组件的流程图，选中XEOS方式下载组件，根据项目需求填写XEOS方式下载组件的名称和描述，如图6-2所示：
 
-![6-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_8_2.png)
+![image](https://user-images.githubusercontent.com/79617492/181187592-cdac7102-87ee-4d84-968d-05223aff2dd8.png)
 
 ##### 图6-2 填写XEOS方式下载组件的基本信息
 
 c）单击“XEOS下载信息”处未选中记录方框，进入填写数据页面，如图6-3所示：
 
-![6-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_8_3.png)
+![image](https://user-images.githubusercontent.com/79617492/181187616-a615f47f-8d6b-4e2b-b3b7-970dccdae3a0.png)
 
 ##### 图6-3 配置XEOS下载信息
 
 d）在填写数据页面，单击“资源实例名称”处的选择记录方框选择已接好的XEOS资源，如图6-4所示：
 
-![6-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_8_4.png)
+![image](https://user-images.githubusercontent.com/79617492/181187633-ebc864d9-2655-4b47-9cef-ffece605841e.png)
 
 ##### 图6-4 选择资源实例
 
 e）设置文件的下载路径，如图6-5所示：
 
-![6-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_8_5.png)
+![image](https://user-images.githubusercontent.com/79617492/181187660-e295caa1-607b-4e29-bf32-f94e4ddcfdc1.png)
 
 ##### 图6-5 设置下载路径
 
@@ -48,7 +48,7 @@ e）设置文件的下载路径，如图6-5所示：
 
 f）选择下载结果返回方式，可根据项目需求选择“直接下载”或“返回流对象”，如图6-6所示：
 
-![6-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_8_6.png)
+![image](https://user-images.githubusercontent.com/79617492/181187690-2ffabac1-d662-4383-86a0-82b596e0cf6b.png)
 
 ##### 图6-6 选择下载结果返回方式
 
