--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/4. 文件组件/7. 导出Excel组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/4. 文件组件/7. 导出Excel组件的使用.md
@@ -14,50 +14,50 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 4.7.3 操作步骤
 
-a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“文件”栏目下，找到XEOS方式下载组件，拖至窗体视图，如图6-1、图6-2所示：
+a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“文件”栏目下，找到XEOS方式下载组件，拖至窗体视图，如图7-1、图7-2所示：
 
-![6-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_3_1_02.png)
+![image](https://user-images.githubusercontent.com/79617492/181187788-73722e97-0e9a-45ce-8909-dd8f7863384f.png)
 
-##### 图6-1 找到导出Excel组件
+##### 图7-1 找到导出Excel组件
 
-![6-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_3_1_03.png)
+![image](https://user-images.githubusercontent.com/79617492/181187814-e148e076-7605-4083-a079-5097dccc10d7.png)
 
-##### 图6-2 连接组件流程图
+##### 图7-2 连接组件流程图
 
-b）选中“导出Excel组件”，根据项目需求填写“导出Excel组件”的名称和描述，如图6-3所示：
+b）选中“导出Excel组件”，根据项目需求填写“导出Excel组件”的名称和描述，如图7-3所示：
 
-![6-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_3_1_04.png)
+![image](https://user-images.githubusercontent.com/79617492/181187836-4500769d-4c4a-444b-865a-0682c74859be.png)
 
-##### 图6-3 填写导出Excel组件的基本信息
+##### 图7-3 填写导出Excel组件的基本信息
 
-c）单击“查询总数SQL信息”处未选中记录方框，如图6-4所示：
+c）单击“查询总数SQL信息”处未选中记录方框，如图7-4所示：
 
-![6-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_3_1_05.png)
+![image](https://user-images.githubusercontent.com/79617492/181187862-911f1493-05be-48b6-832a-319e415a0207.png)
 
-##### 图6-4 配置查询总数SQL信息
+##### 图7-4 配置查询总数SQL信息
 
-d）进入“填写数据”页面，选择查询总数SQL语句，同时选择接口根参数，如图6-5所示：
+d）进入“填写数据”页面，选择查询总数SQL语句，同时选择接口根参数，如图7-5所示：
 
-![6-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_3_1_06.png)
+![image](https://user-images.githubusercontent.com/79617492/181187880-45c03383-63e4-4249-89cc-9a9703a70ff5.png)
 
-##### 图6-5 配置查询总数SQL信息
+##### 图7-5 配置查询总数SQL信息
 
-e）单击“查询分页SQL信息”处未选中记录方框，如图6-6所示：
+e）单击“查询分页SQL信息”处未选中记录方框，如图7-6所示：
 
-![6-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_3_1_07.png)
+![image](https://user-images.githubusercontent.com/79617492/181187885-4420bed1-cdf4-4f17-aaff-d0145296bbf3.png)
 
-##### 图6-6 配置查询分页SQL信息
+##### 图7-6 配置查询分页SQL信息
 
-f）进入“填写数据”页面，选择查询分页SQL语句，同时选择接口根参数，如图6-7所示：
+f）进入“填写数据”页面，选择查询分页SQL语句，同时选择接口根参数，如图7-7所示：
 
-![6-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_3_1_08.png)
+![image](https://user-images.githubusercontent.com/79617492/181187906-fb7f0fbd-2775-4b9a-a2dc-66feda5e8f60.png)
 
-##### 图6-7 配置查询分页SQL信息
+##### 图7-7 配置查询分页SQL信息
 
-g）最后输入导出Excel文件的文件名即可，如图6-8所示：
+g）最后输入导出Excel文件的文件名即可，如图7-8所示：
 
-![6-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_3_1_09.png)
+![image](https://user-images.githubusercontent.com/79617492/181187924-0f72719c-61b3-4901-a41d-fac05bab9d83.png)
 
-##### 图6-8 输入导出Excel文件的文件名
+##### 图7-8 输入导出Excel文件的文件名
 
 h）配置完成后，单击“保存并退出”。
