--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/5. 条件组件/1. 互斥条件组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/5. 条件组件/1. 互斥条件组件的使用.md
@@ -16,43 +16,43 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）单击已创建接口模块的“+”加号按钮，选择“新增接口”，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_1.png)
+![image](https://user-images.githubusercontent.com/79617492/181200439-6d30d73c-a6e6-408d-8340-dc84a03a68ea.png)
 
 ##### 图1-1 新增接口
 
 b）填写接口的基本信息，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_2.png)
+![image](https://user-images.githubusercontent.com/79617492/181200484-be65353e-1490-434d-9158-488bd6ec231a.png)
 
 ##### 图1-2 填写接口基本信息
 
 c）配置接口的入口参数，配置完成后单击“提交”，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_3.png)
+![image](https://user-images.githubusercontent.com/79617492/181200504-70929595-05e0-44ab-b85b-9c77fec49b39.png)
 
 ##### 图1-3 配置入口参数
 
 ##### 说明：为演示互斥条件组件的功能，此处配置两个整型变量x、y，以便后续进行变量间的逻辑判断，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_4.png)
+![image](https://user-images.githubusercontent.com/79617492/181200550-dedf3fe0-e9ac-44be-a91d-b408eb38a9d0.png)
 
 ##### 图1-4 示例
 
 d）进入模型页面，单击“进入模型编辑”，如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_5.png)
+![image](https://user-images.githubusercontent.com/79617492/181200751-fe102172-f4cc-498c-81cf-7647874772ab.png)
 
 ##### 图1-5 模型页面
 
 e）进入窗体视图，在左侧组件列表的“基础”栏目下，找到互斥条件组件，将其拖拽至画布，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_6.png)
+![image](https://user-images.githubusercontent.com/79617492/181200778-340bafde-c11c-4031-a19b-d2a753b99a12.png)
 
 ##### 图1-6 找到互斥条件组件
 
 f）同时选择两个输出结果组件，拖拽至画布，连接好组件的流程图，如图1-7所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_7.png)
+![image](https://user-images.githubusercontent.com/79617492/181200869-de0014e4-cd66-48ac-bdb7-38f4c1cd5bdd.png)
 
 ##### 图1-7 连接组件流程图
 
@@ -60,25 +60,25 @@ g）选中互斥条件组件，填写组件的名称和描述。
 
 h）选中互斥条件组件的一条顺序流，填写顺序流的基本信息，如图1-8所示：
 
-![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_8.png)
+![image](https://user-images.githubusercontent.com/79617492/181200905-cc7bf6fe-a857-4c55-8c1d-8788bc1a46c0.png)
 
 ##### 图1-8 选中顺序流
 
 i）单击“流转条件”处的未选中记录方框，设置顺序流的流转条件，如图1-9所示：
 
-![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_9.png)
+![image](https://user-images.githubusercontent.com/79617492/181201005-4427ea6f-572a-4960-9cf7-4ee5b257bbb6.png)
 
 ##### 图1-9 设置流转条件
 
 j）进入流转条件页面，选择“可视化”页签，选择添加条件或添加联合条件，如图1-10所示：
 
-![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_10.png)
+![image](https://user-images.githubusercontent.com/79617492/181201030-36f9bb79-8cc1-4ec4-8b33-bae5375ed9cd.png)
 
 ##### 图1-10 设置流转条件
 
 ##### 说明：在设置流转条件时，选择“可视化”页签可通过选择流程变量来添加流转条件，若选择“自定义”页签，则需要手动输入UEL表达式来添加流转条件，其格式为：${流程变量判断}，如图1-11所示：
 
-![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_11.png)
+![image](https://user-images.githubusercontent.com/79617492/181201059-4a0175e5-1b57-4c96-98fe-d1d67fe5c2e0.png)
 
 ##### 图1-11 自定义流转条件
 
