--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/5. 条件组件/2. 包容性条件组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/5. 条件组件/2. 包容性条件组件的使用.md
@@ -14,45 +14,45 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 5.2.3 操作步骤
 
-a）在窗体视图左侧的“组件列表”中，找到“包容性条件”组件，拖拽至绘图面板，如图1-1所示：
+a）在窗体视图左侧的“组件列表”中，找到“包容性条件”组件，拖拽至绘图面板，如图2-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_1.png)
+![image](https://user-images.githubusercontent.com/79617492/181205667-25bfe451-7961-4eb3-b451-a4769d151aa5.png)
 
-##### 图1-1 找到“包容性条件”组件
+##### 图2-1 找到“包容性条件”组件
 
-b）同时选择三个“单函数”组件、一个“输出结果”组件以及另一个“包容性条件”组件，拖拽至绘图面板，连接好组件的流程图，如图1-2所示：
+b）同时选择三个“单函数”组件、一个“输出结果”组件以及另一个“包容性条件”组件，拖拽至绘图面板，连接好组件的流程图，如图2-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_2.png)
+![image](https://user-images.githubusercontent.com/79617492/181205690-8381f4e1-7e02-4ba5-a4f8-a3e27045e8f8.png)
 
-##### 图1-2 连接组件流程图
+##### 图2-2 连接组件流程图
 
 ##### 说明：此处另一个“包容性条件”组件用于合并流程。
 
-c）选中一个“单函数”组件，根据项目需求填写单函数的名称和描述，如图1-3所示：
+c）选中一个“单函数”组件，根据项目需求填写单函数的名称和描述，如图2-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_3.png)
+![image](https://user-images.githubusercontent.com/79617492/181205802-2d8648ca-2736-4d90-b63e-306b23adc420.png)
 
-##### 图1-3 填写单函数基本信息
+##### 图2-3 填写单函数基本信息
 
-d）单击“函数信息”处未选中记录方框，进入“填写数据”页面，如图1-4所示：
+d）单击“函数信息”处未选中记录方框，进入“填写数据”页面，如图2-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_4.png)
+![image](https://user-images.githubusercontent.com/79617492/181205938-d399e577-857f-4973-bcd3-0b47e2f0527b.png)
 
-##### 图1-4 填写数据页面
+##### 图2-4 填写数据页面
 
-e）选择函数类别、函数类路径和函数名称，也可根据项目需要设置参数信息，如图1-5所示：
+e）选择函数类别、函数类路径和函数名称，也可根据项目需要设置参数信息，如图2-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_5.png)
+![image](https://user-images.githubusercontent.com/79617492/181206972-738f2221-62c0-47ee-b743-83a426d5cf72.png)
 
-##### 图1-5 设置函数信息
+##### 图2-5 设置函数信息
 
 f）函数信息设置完成后，单击“确定”即可。
 
-g）同理设置另外两个“单函数”组件，如图1-6所示：
+g）同理设置另外两个“单函数”组件，如图2-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_6.png)
+![image](https://user-images.githubusercontent.com/79617492/181208460-217f4a9a-0956-4b04-8d73-2d0519ccb264.png)
 
-##### 图1-6 设置单函数组件
+##### 图2-6 设置单函数组件
 
 h）流程图编辑完成后，单击“保存并退出”。
 
