--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）高阶专题/6. 自定义资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）高阶专题/6. 自定义资源实例.md
@@ -12,7 +12,7 @@
 
 下载开发辅助工具：在全自动开发平台中，单击右上角下载开发辅助工具，如图1-1所示。
 
-![1-1](https://www.feisuanyz.com/fsimage/gj-image/gj_0000_img.png)
+![image](https://user-images.githubusercontent.com/79617492/181440392-2664abe4-56e1-42e0-b2d0-33017b68cab9.png)
 
 ##### 图1-1 下载开发辅助工具
 
@@ -136,4 +136,4 @@ demo-resource-1.0.0.pom
 
 f）将生成的` demo-resource-1.0.0.jar `和` demo-resource-1.0.0.pom `压缩成一个zip包上传到平台即可。
 
-##### 说明：如何导入自定义资源，请参见[《SoFlu社区版基础操作指南第3.1节：导入资源实例》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/3.%20%E5%AF%BC%E5%85%A5%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md)详细操作步骤。
+##### 说明：如何导入自定义资源，请参见[《SoFlu（后端）全自动开发平台教程基础操作指南第10.3.1节：导入资源实例》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/3.%20%E5%AF%BC%E5%85%A5%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#31-%E5%AF%BC%E5%85%A5%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B)详细操作步骤。
