--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -8,7 +8,7 @@
 
 在【用户注册页面】填写好用户注册信息以后，输入注册手机号，单击“发送验证码”，即可接收到验证码；填写收到的验证码，单击“注册”按钮进入【用户管理页面】，即可查看所有用户注册信息，并可对每一位用户进行启用或停用的操作。
 
-![1-1](https://www.feisuanyz.com/fspage/alcj/register/userregister_1_1.png)
+![image](https://user-images.githubusercontent.com/79617492/182576786-fc3ade78-3926-4292-bdb0-553f4fb1c703.png)
 
 ##### 图1-1 用户注册页面
 
@@ -16,7 +16,7 @@
 
 在（后端）全自动开发平台准备前端页面需调用到的5个接口：
 
-![1-2](https://www.feisuanyz.com/fspage/alcj/register/userregister_2_1.png)
+![image](https://user-images.githubusercontent.com/79617492/182576801-a39dade5-41cb-4023-b122-ab09a876f373.png)
 
 ##### 图1-2 需调用到的5个接口
 
@@ -24,7 +24,7 @@ a）saveUserregistration接口
 
 用于新增用户注册信息。
 
-![1-3](https://www.feisuanyz.com/fspage/alcj/register/userregister_2_2.png)
+![image](https://user-images.githubusercontent.com/79617492/182576820-70ef082e-01ce-4da2-a43f-3b22229ebbcb.png)
 
 ##### 图1-3 saveUserregistration接口流程图
 
