--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/3. 创建页面.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/3. 创建页面.md
@@ -10,7 +10,7 @@ a）单击已创建的应用项目卡片，进入页面管理界面。
 
 ##### 说明：应用项目下所有创建的页面将在该页面显示，用户可对创建的所有页面及页面间的关系一目了然。
 
-![3-1](https://www.feisuanyz.com/fspage/ksrm/ksrm_2_1.png)
+![image](https://user-images.githubusercontent.com/79617492/183019902-dda53b5a-08c3-44de-a3cc-385706bae17f.png)
 
 ##### 图3-1 页面管理界面
 
