--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/6. 运行运用.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/6. 运行运用.md
@@ -8,7 +8,7 @@
 
 a）页面开发完成后，回到应用管理页面，单击应用项目卡片上的“运行”图标即可。
 
-![6-1](https://www.feisuanyz.com/fspage/ksrm/ksrm_5_1.png)
+![image](https://user-images.githubusercontent.com/79617492/183323335-bc12be81-df3d-4915-ab13-037312e433fd.png)
 
 ##### 图6-1 单击“运行”图标
 
