--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/2. 创建数据库连接.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/2. 创建数据库连接.md
@@ -10,25 +10,25 @@
 
 a）单击应用项目卡片，进入页面管理界面。
 
-![2-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_1_1.png)
+![image](https://user-images.githubusercontent.com/79617492/183325042-2c609259-efed-46a8-95b2-7152f37adab6.png)
 
 ##### 图2-1 页面管理界面
 
 b）单击页面管理界面上方的“表单设计”选项，进入表单管理界面，如下所示。
 
-![2-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_1_2.png)
+![image](https://user-images.githubusercontent.com/79617492/183326656-1e080541-ba0a-49de-84d5-18599ba856d2.png)
 
 ##### 图2-2 进入表单管理界面
 
 c）单击表单管理界面上方“数据库设置”选项，进入数据库设置。
 
-![2-3](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_1_3.png)
+![image](https://user-images.githubusercontent.com/79617492/183326684-2e5c1ae7-e4dc-482b-bcd3-c9ebc446b870.png)
 
 ##### 图2-3 进入数据库设置
 
 d）单击“新增”，新增数据库连接。
 
-![2-4](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_1_4.png)
+![image](https://user-images.githubusercontent.com/79617492/183326732-142507c7-6299-4112-aebd-ffad4a7cc991.png)
 
 ##### 图2-4 新增数据库连接
 
