--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/6. 发布表单.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/6. 发布表单.md
@@ -8,7 +8,7 @@
 
 a）在表单设计界面，单击上方的“提交版本”选项。
 
-![6-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_5_1.png)
+![image](https://user-images.githubusercontent.com/79617492/183357030-17187fd1-c42f-44f4-a8c3-68f553e80a48.png)
 
 ##### 图6-1 单击“提交版本”选项
 
