--- a/SoFlu全自动测试平台教程/1. 快速入门/1. 如何创建项目.md
+++ b/SoFlu全自动测试平台教程/1. 快速入门/1. 如何创建项目.md
@@ -8,13 +8,13 @@
 
 a）进入全自动测试平台，单击左上角的创建项目。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/image.png)
+![image](https://user-images.githubusercontent.com/79617492/183832988-b498c4b8-d737-4cbd-904f-0dd602770e0b.png)
 
 ##### 图1-1 创建项目
 
 b）填写项目基本信息，单击确定即可创建完成。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/183832998-ec1c691c-6e56-40f5-b8a1-8d0f7c984b07.png)
 
 ##### 图1-2 创建完成
 
