--- a/SoFlu全自动测试平台教程/1. 快速入门/2. 如何配置环境.md
+++ b/SoFlu全自动测试平台教程/1. 快速入门/2. 如何配置环境.md
@@ -8,7 +8,7 @@
 
 a）进入全自动测试平台，鼠标悬停在项目右下角的更多图标上，然后单击环境配置，进入环境配置。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/183833895-0009f81b-c409-47ec-81ce-10d01693f2a0.png)
 
 ##### 图2-1 进入环境配置
 
@@ -16,7 +16,7 @@ b）单击“+”新增环境配置，填写环境的基本信息。
 
 c）在HTTP配置页签下，选择传输协议，填写域名或IP地址，选择所属接口，单击添加域名配置，最后单击保存环境配置即可。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/183833907-4c7d7c16-048c-4ed2-b1ee-754a4c7a2af0.png)
 
 ##### 图2-2 保存环境配置
 
