--- a/SoFlu全自动测试平台教程/1. 快速入门/7. 如何配置资源池.md
+++ b/SoFlu全自动测试平台教程/1. 快速入门/7. 如何配置资源池.md
@@ -8,36 +8,36 @@
 
 a）进入全自动测试平台首页，单击右上方系统配置按钮。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/7-1.png)
+![image](https://user-images.githubusercontent.com/79617492/184099223-df79b3c6-685d-4066-90b6-554bab386157.png)
 
 ##### 图7-1 单击系统配置按钮
 
 b）进入系统配置页面，单击服务 > 资源池管理，单击新增资源池。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/7-2.png)
+![image](https://user-images.githubusercontent.com/79617492/184099237-7b7ea777-5383-4f02-adb0-bf8e8516c813.png)
 
 ##### 图7-2 新增资源池
 
 c）系统弹出新增资源池页面，以新增Docker类型资源为例，填写资源池名称，并选择资源池类型，单击提交即新增资源池完成。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/7-3.png)
+![image](https://user-images.githubusercontent.com/79617492/184099253-53c321a5-43ed-4846-b8fb-44c0bb64a011.png)
 
 ##### 图7-3 填写资源池信息
 
 d）选中上一步骤新增的资源池，单击资源管理选项，进入资源管理界面。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/7-4.png)
+![image](https://user-images.githubusercontent.com/79617492/184099264-2055fdd6-4089-43a3-b444-61a4b6073faa.png)
 
 ##### 图7-4 进入资源管理界面
 
 e）系统显示资源管理页面，单击新增资源。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/7-5.png)
+![image](https://user-images.githubusercontent.com/79617492/184099286-67b3b3a1-3580-4b88-adc9-26515e587236.png)
 
 ##### 图7-5 单击新增资源
 
 f）系统弹出新增资源页面，您需要填写新增资源的详细信息，填写完成后单击提交即可。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/7-6.png)
+![image](https://user-images.githubusercontent.com/79617492/184099314-335151f0-79cd-4498-987a-52ae3d6dd115.png)
 
 ##### 图7-6 填写资源信息
