--- a/SoFlu全自动测试平台教程/1. 快速入门/9. 如何创建测试计划.md
+++ b/SoFlu全自动测试平台教程/1. 快速入门/9. 如何创建测试计划.md
@@ -8,13 +8,13 @@
 
 a）进入测试项目，在页面上方单击测试计划 > + > 新增测试计划。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9-1.png)
+![image](https://user-images.githubusercontent.com/79617492/184099440-74f76fd2-f606-4eb1-bbeb-90344877caa0.png)
 
 ##### 图9-1 新增测试计划
 
 b）系统显示新增测试计划页面，您需要填写测试计划的基本信息，填写完成后单击保存即可。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9-2.png)
+![image](https://user-images.githubusercontent.com/79617492/184099461-55b8a9ea-0c2a-42cd-9a2d-6fe51e27042f.png)
 
 ##### 图9-2 填写基本信息
 
