--- a/SoFlu全自动测试平台教程/2. 操作指南/1. 项目管理/10. 修改环境配置.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/1. 项目管理/10. 修改环境配置.md
@@ -12,42 +12,42 @@
 
 a）进入全自动测试平台，鼠标悬停在项目右下角的更多图标上，然后单击环境配置。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/10-1.png)
+![image](https://user-images.githubusercontent.com/79617492/184099870-49a931d5-a4b9-4f71-bbac-bacdff1aad34.png)
 
 ##### 图10-1 单击环境配置
 
 b）选择需要修改的环境，修改环境的基本信息，然后双击域名。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/10-2.png)
+![image](https://user-images.githubusercontent.com/79617492/184099877-f27c614f-cc48-423d-96d0-16b25442ae80.png)
 
 ##### 图10-2 选择需要修改的环境
 
 c）修改HTTP配置，然后单击更新域名配置。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/10-3.png)
+![image](https://user-images.githubusercontent.com/79617492/184099884-7205073d-0d4f-4c8e-995b-a202a1763f52.png)
 
 ##### 图10-3 修改HTTP配置
 
 d）单击全局变量，进行修改全局变量信息。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/10-4.png)
+![image](https://user-images.githubusercontent.com/79617492/184099899-a1f7c380-47ef-497d-82f5-3740d7db09fa.png)
 
 ##### 图10-4 修改全局变量信息
 
 e）单击证书配置，进行修改证书配置信息。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/10-5.png)
+![image](https://user-images.githubusercontent.com/79617492/184099912-6a3ec7b1-6bc9-44b7-b1aa-93545235a410.png)
 
 ##### 图10-5 修改证书配置信息
 
 f）单击TCP配置，进行修改TCP配置信息。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/10-6.png)
+![image](https://user-images.githubusercontent.com/79617492/184099945-f119b5a3-d417-4698-a335-9026d19828c2.png)
 
 ##### 图10-6 修改TCP配置信息
 
 g）单击保存环境配置，完成修改环境配置。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/10-7.png)
+![image](https://user-images.githubusercontent.com/79617492/184099957-01589ece-392a-4360-b613-8583f6d272f6.png)
 
 ##### 图10-7 保存环境配置
