--- a/SoFlu全自动测试平台教程/2. 操作指南/1. 项目管理/2. 修改项目.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/1. 项目管理/2. 修改项目.md
@@ -10,12 +10,12 @@
 
 a）进入全自动测试平台，单击项目的修改图标。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/184268544-1605d61a-7e26-415f-8983-06d7fdd30f3b.png)
 
 ##### 图2-1 单击项目的修改图标
 
 b）修改项目基本信息，然后单击确定即可。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/184268551-2aa65990-8900-4fb8-a588-c88564c5b0c6.png)
 
 ##### 图2-2 修改项目基本信息
