--- a/SoFlu全自动测试平台教程/2. 操作指南/1. 项目管理/5. 项目分组.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/1. 项目管理/5. 项目分组.md
@@ -10,13 +10,13 @@
 
 a）进入全自动测试平台，鼠标悬停在分组设置上，然后单击创建分组。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/5-1.png)
+![image](https://user-images.githubusercontent.com/79617492/184269929-d1ff1ab3-74a5-4efb-9dc7-6c5281d6e431.png)
 
 ##### 图5-1 单击创建分组
 
 b）输入分组名称，然后单击确定即可。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/5-2.png)
+![image](https://user-images.githubusercontent.com/79617492/184269945-b83ed801-10bf-4d05-9d6a-10db5927bdbe.png)
 
 ##### 图5-2 输入分组名称
 
@@ -24,13 +24,13 @@ b）输入分组名称，然后单击确定即可。
 
 a）进入全自动测试平台，鼠标悬停在分组设置上，选择需要修改的分组，然后单击修改图标。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/5-3.png)
+![image](https://user-images.githubusercontent.com/79617492/184269954-94aae4b4-80b1-4ebf-8481-c496be3bbf6b.png)
 
 ##### 图5-3 选择需要修改的分组
 
 b）修改分组名称，然后单击确定即可。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/5-4.png)
+![image](https://user-images.githubusercontent.com/79617492/184269960-c7872d6b-a8b6-4da8-b433-2dc0b396a0ae.png)
 
 ##### 图5-4 修改分组名称
 
@@ -42,12 +42,12 @@ b）修改分组名称，然后单击确定即可。
 
 a）进入全自动测试平台，鼠标悬停在分组设置上，选择需要删除的分组，然后单击删除图标。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/5-5.png)
+![image](https://user-images.githubusercontent.com/79617492/184269975-7df6f1cb-b57c-4b46-8846-8aec758eb03e.png)
 
 ##### 图5-5 删除分组
 
 b）提示弹窗里单击确定即可。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/5-6.png)
+![image](https://user-images.githubusercontent.com/79617492/184269984-572ab9ea-e48b-47cb-9501-07d66b0a8204.png)
 
 ##### 图5-6 单击确定
