--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/1. 系统配置/8. 配置基本信息.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/1. 系统配置/8. 配置基本信息.md
@@ -12,13 +12,13 @@
 
 a）进入全自动测试平台，单击右上方的系统设置按钮。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/1.%20%E7%B3%BB%E7%BB%9F%E9%85%8D%E7%BD%AE/8-1.png)
+![image](https://user-images.githubusercontent.com/79617492/184813641-4698dccb-9a5c-4046-aa5e-186411b6b8f6.png)
 
 ##### 图8-1 单击系统设置按钮
 
 b）进入系统设置页面，单击系统 > 个人设置，输入收件人邮箱，单击保存即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/1.%20%E7%B3%BB%E7%BB%9F%E9%85%8D%E7%BD%AE/8-2.png)
+![image](https://user-images.githubusercontent.com/79617492/184813652-707fa597-01b0-4595-a071-c8521b92e2f9.png)
 
 ##### 图8-2 填写邮箱地址
 
