--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/1. 系统配置/9. 集成缺陷管理平台.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/1. 系统配置/9. 集成缺陷管理平台.md
@@ -10,7 +10,7 @@
 
 ##### 2.2.1.9.1 前提条件
 
-a）您需要在禅[道官网](https://www.zentao.net/index.html)下载并安装好开源版禅道系统。
+a）您需要在[禅道官网](https://www.zentao.net/index.html)下载并安装好开源版禅道系统。
 
 b）版本需为开源版12.5.3以上。
 
